@@ -20,8 +20,6 @@
     NSString *path;
     NSString *filename;
     NSString *pluginDescription;
-
-    BOOL isLoaded;
 }
 
 + (WebBasePluginPackage *)pluginWithPath:(NSString *)pluginPath;
@@ -35,9 +33,5 @@
 - (NSDictionary *)extensionToMIMEDictionary;
 - (NSDictionary *)MIMEToExtensionsDictionary;
 - (NSDictionary *)MIMEToDescriptionDictionary;
-
-- (BOOL)load;
-- (void)unload;
-- (BOOL)isLoaded;
 
 @end
