@@ -15,6 +15,7 @@
 {
     BOOL isBundle;
     BOOL isCFM;
+    BOOL isLoaded;
     
     NPPluginFuncs pluginFuncs;
     NPNetscapeFuncs browserFuncs;
@@ -43,6 +44,9 @@
     NPP_SetValueProcPtr NPP_SetValue;
     NPP_ShutdownProcPtr NPP_Shutdown;
 }
+
+- (BOOL)load;
+- (void)unload;
 
 - (NPP_NewProcPtr)NPP_New;
 - (NPP_DestroyProcPtr)NPP_Destroy;
